--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -3,11 +3,11 @@
 % Adam Rahman's Resume Template
 %
 
-\documentclass[letterpaper, 11pt]{article}
+\documentclass[letterpaper, 10.5pt]{article}
 
 \usepackage{inputenc}
 \usepackage{fontspec}
-\usepackage[margin=1.1125in]{geometry}
+\usepackage[margin=0.375in]{geometry}
 \usepackage{titlesec}
 \usepackage{colortbl}
 \usepackage{titling}
@@ -30,6 +30,19 @@
 % Title Command
 % Generates resume header
 %
+% \renewcommand{\maketitle}{
+% 	\hspace{.125\textwidth}
+% 	\begin{minipage}[t]{.75\textwidth}
+%     \begin{center}
+%         \fontsize{16pt}{15pt}\selectfont\bfseries \theauthor \\
+%         \fontsize{10pt}{15pt}\selectfont\sf
+%         \href{mailto:mrahmanadam@gmail.com}{mrahmanadam@gmail.com} · (347) 593 7525 \\
+%         Portfolio: \href{http://adamr.io}{adamr.io} · 
+%         LinkedIn: \href{https://www.linkedin.com/in/adamsrahman/}{adamsrahman} · 
+%         Github: \href{https://github.com/msradam}{msradam}  \\ 
+%         \end{center}
+%     \end{minipage}}
+
 \renewcommand{\maketitle}{
 	\hspace{.125\textwidth}
 	\begin{minipage}[t]{.75\textwidth}
@@ -42,6 +55,7 @@
         Github: \href{https://github.com/msradam}{msradam}  \\ 
         \end{center}
     \end{minipage}}
+
 
 \renewcommand{\familydefault}{\sfdefault}
 
@@ -58,7 +72,7 @@
     \vspace{1pt}
     \\\textit{#3} \small{#4}
     \end{minipage}\\
-    \vspace{.15cm}
+    \vspace{.125cm}
     }
 
 % Experience Schema:
@@ -75,7 +89,7 @@
     \vspace{-1.5mm}
     \small{#5}
     \end{minipage}\\
-    \vspace{.15cm}
+    \vspace{.125cm}
     }
 
 
@@ -87,11 +101,26 @@
     \begin{minipage}[t]{.80\linewidth}
     {\bf#2}
     \\ #3 
-    \vspace{-1.5mm}
+    \vspace{-1.0mm}
     \small{#4}
     \end{minipage}\\
-    \vspace{.15cm}
+    \vspace{.125cm}
     }
+
+    \newcommand{\awardentry}[4]{
+        \begin{minipage}[t]{.15\linewidth}
+        \hfill \textsc{#1}
+        \end{minipage}
+        \hfill\vline\hfill
+        \begin{minipage}[t]{.80\linewidth}
+        {\bf#2}
+        \\ #3 
+        \vspace{-1.5mm}
+        \small{#4}
+        \end{minipage}\\
+        \vspace{.10cm}
+        }           
+    
 
 
 \newcommand{\skillentry}[2]{
@@ -107,7 +136,7 @@
 
 % Title and line formatting
 \titleformat{\part}{\Huge\scshape\filcenter}{}{1em}{}
-\titleformat{\section}{\large\bf\scshape\raggedright}{}{0.5em}{}[{\titlerule[0.75pt]}]
+\titleformat{\section}{\large\scshape\raggedright}{}{0.5em}{}[{\titlerule[0.75pt]}]
 \titlespacing{\section}{0pt}{3pt}{7pt}
 \titleformat{\subsection}{\large\bfseries\centering}{}{0em}{\underline}%[\rule{3cm}{.2pt}]
 \titlespacing{\subsection}{0pt}{7pt}{7pt}
@@ -117,7 +146,7 @@
 
 \begin{document}
     \maketitle
-    \vspace{.5cm}
+    \vspace{.125cm}
 
 
     \section{education}
@@ -127,6 +156,19 @@
     {\\ Patricelli Center Fellow; Deans' List}
 
     \section{experience}
+    \expentry{Sep '19}
+    {Nov '19}
+    {Buildly}
+    {Software Engineering Intern | New York, NY (Remote)}
+    {
+
+        \begin{itemize}{\leftmargin=0.5em \itemindent=0em}
+          \setlength\itemsep{0.1mm}
+          \item Contributed to the development of Buildly, an open-source platform  which combines a quick-start application builder for backend data APIs with a front end library for rapid prototyping 
+        \end{itemize}
+        
+    }
+
     \expentry{Dec '18}
     {Feb '19}
     {UNICEF}
@@ -135,9 +177,9 @@
 
         \begin{itemize}{\leftmargin=0.5em \itemindent=0em}
           \setlength\itemsep{0.1mm}
-          \item Implemented high-performance utilities for UNICEF's open-source Magicbox platform to \href{https://github.com/unicef/magicbox-download-roads}{retrieve road networks} for countries and \href{https://github.com/msradam/magicbox-site-routing}{compute distances} between large geospatial datasets 
-          \item Collaborated with UNICEF Innovation's development and data science teams via a Scrum framework
-          \item Deployed a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker container} bundled with geospatial analysis tools for Magicbox developers and data scientists
+          \item Implemented utilites to \href{https://github.com/unicef/magicbox-download-roads}{retrieve road networks} for countries and \href{https://github.com/msradam/magicbox-site-routing}{compute distances} between coordinates in large geospatial datasets with machine-learning and networking libraries
+          \item Optimized algorithm performance to improve geospatial computation speed by thousands of times 
+          \item Provisioned a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker container} bundled with these utilities and additional libraries for Magicbox developers and data scientists
         \end{itemize}
         
     }
@@ -148,45 +190,53 @@
     {Computer Science Intern | New York, NY}
     {\begin{itemize}
           \setlength\itemsep{0.1mm}
-          \item Prototyped IoT and AI integration in classrooms by designing dashboards to serve Raspberry Pi sensor data and sentiment analysis predictions
+          \item Expanded the scope of Kurani's archiectural design by prototyping IoT dashboards for learning spaces
+          \item Incorporated Raspberry Pi sensors and IBM Watson Machine Learning predictions in dashboards
         \end{itemize}
     }
 
     \section{projects}
 
-        \projectentry{Aug '19}
-        {Carceral Contagion - Agent-Based Mass Incarceration Model}
-        {Data Engineer | Python (iGraph), D3}
-        {\begin{itemize}
-            \setlength\itemsep{0.1mm}
-            \item Designed an \href{https://github.com/msradam/carceral-contagion}{agent-based simulation} of racial disparities in mass incarceration through a synthetic population network 
-            \item Implemented a browser visualization with WebSockets and D3.js
-          \end{itemize}
-        }
-
         \projectentry{July '19}
             {Magicbox Geospatial Routing API}
-            {Backend Engineer | Django, Docker}
+            {Django, Docker, PostgreSQL | \href{https://magicbox-routing.herokuapp.com}{magicbox-routing.herokuapp.com}}
             {\begin{itemize}
                 \setlength\itemsep{0.1mm}
-                \item Developed and documented a \href{https://github.com/msradam/magicbox-routing-api}{API for Magicbox engineers} to run computations on large geospatial datasets and retrieve road networks
+                \item Implemented a geospatial computation microservice for UNICEF's Magicbox platform, incorporating the utilities developed during the internship period
+                \item Designed a frontend to upload datasets and view road network visualizations with React and kepler.gl
+                \item Provisioned the microservice as a Docker image for streamlined deployment
             \end{itemize}
             }
 
         \projectentry{Jun '19}
             {RESP - Psychological First-Aid for Natural Disasters}
-            {Backend Engineer | Django, React}
+            {Node, Express, MongoDB, React | \href{https://resp-angelhack.herokuapp.com}{resp-angelhack.herokuapp.com}}
             {\begin{itemize}
                 \setlength\itemsep{0.1mm}
-                \item Designed a \href{https://github.com/msradam/resp-api}{REST API} with check-in, status, and sentiment analysis functionality
+                \item Implemented a REST API to check-in natural disaster survivors with a Typeform webhook, store them in a database, and query nearby health facilities with the Healthsites.io API
+                \item Designed a frontend  to display checked-in survivors and local health facilities
                 \item Winner of the IBM Call for Code Challenge at AngelHack Manhattan
             \end{itemize}
             }
             
     \section{technical skills}
 
-    \skillentry{languages}{Python, JavaScript(ES6+), HTML5, CSS3 }
+    \skillentry{languages}{Python, JavaScript(ES6+), Java, HTML5, CSS3, Bash}
     \skillentry{concepts}{RESTful API Design/Integration, MVC Architecture, Agile}
-    \skillentry{tools}{Git, Docker, Heroku, Google Cloud Platform }
-    \skillentry{frameworks}{Django, Flask, Node.js + Express, Vue.js, React}
+    \skillentry{frameworks}{Django, Flask, Express, React, Jest}
+    \skillentry{tools}{Git, Docker, Heroku, Google Cloud Platform (GCP), Amazon Web Services (AWS) }
+    \skillentry{data}{PostgreSQL, GraphQL, MongoDB}
+    \skillentry{testing}{Unit, Integration, End-to-End}
+
+
+    \section{awards}
+    \projectentry{Aug '19}
+    {IBM Call for Code Challenge Winner}
+    {AngelHack Manahttan}
+    {    }
+
+    \projectentry{Nov '17}
+    {Social Good Award}
+    {Wellesley Hacks}
+    {    }
 \end{document}
