Clarified work experience.

--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -136,7 +136,7 @@
 
 % Title and line formatting
 \titleformat{\part}{\Huge\scshape\filcenter}{}{1em}{}
-\titleformat{\section}{\large\scshape\raggedright}{}{0.5em}{}[{\titlerule[0.75pt]}]
+\titleformat{\section}{\large\scshape\bfseries\raggedright}{}{0.5em}{}[{\titlerule[0.75pt]}]
 \titlespacing{\section}{0pt}{3pt}{7pt}
 \titleformat{\subsection}{\large\bfseries\centering}{}{0em}{\underline}%[\rule{3cm}{.2pt}]
 \titlespacing{\subsection}{0pt}{7pt}{7pt}
@@ -164,7 +164,8 @@
 
         \begin{itemize}{\leftmargin=0.5em \itemindent=0em}
           \setlength\itemsep{0.1mm}
-          \item Contributed to the development of Buildly, an open-source platform  which combines a quick-start application builder for backend data APIs with a front end library for rapid prototyping 
+          \item Debugged and tested features for the Buildly product backend, including the management of multiple endpoints
+          \item Maintained and executed unit and integration tests for the product core 
         \end{itemize}
         
     }
@@ -179,19 +180,28 @@
           \setlength\itemsep{0.1mm}
           \item Implemented utilites to \href{https://github.com/unicef/magicbox-download-roads}{retrieve road networks} for countries and \href{https://github.com/msradam/magicbox-site-routing}{compute distances} between coordinates in large geospatial datasets with machine-learning and networking libraries
           \item Optimized algorithm performance to improve geospatial computation speed by thousands of times 
-          \item Provisioned a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker container} bundled with these utilities and additional libraries for Magicbox developers and data scientists
+          \item Provisioned a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker image} bundled with these utilities and additional libraries for Magicbox developers and data scientists
         \end{itemize}
         
     }
 
     \expentry{Jun '18}
     {Aug '18}
-    {Kurani Archiecture Firm}
+    {Kurani Architecture Firm}
     {Computer Science Intern | New York, NY}
     {\begin{itemize}
           \setlength\itemsep{0.1mm}
-          \item Expanded the scope of Kurani's archiectural design by prototyping IoT dashboards for learning spaces
-          \item Incorporated Raspberry Pi sensors and IBM Watson Machine Learning predictions in dashboards
+          \item Integrated Raspberry Pi sensor data and IBM Watson Machine Learning predictions in prototype IoT dashboards
+        \end{itemize}
+    }
+
+    \expentry{Sep '17}
+    {Feb '19}
+    {Wesleyan Local Co-Op}
+    {Programmer | Middletown, CT}
+    {\begin{itemize}
+          \setlength\itemsep{0.1mm}
+          \item Implemented web and command-line utilities to retrieve Qualtrics survey data, compute share prices for participants, and output a spreadsheet for co-op coordinates to determine total shares and money owed per-person
         \end{itemize}
     }
 
@@ -204,7 +214,7 @@
                 \setlength\itemsep{0.1mm}
                 \item Implemented a geospatial computation microservice for UNICEF's Magicbox platform, incorporating the utilities developed during the internship period
                 \item Designed a frontend to upload datasets and view road network visualizations with React and kepler.gl
-                \item Provisioned the microservice as a Docker image for streamlined deployment
+                \item Provisioned the microservice as a Docker container for streamlined deployment
             \end{itemize}
             }
 
@@ -213,7 +223,7 @@
             {Node, Express, MongoDB, React | \href{https://resp-angelhack.herokuapp.com}{resp-angelhack.herokuapp.com}}
             {\begin{itemize}
                 \setlength\itemsep{0.1mm}
-                \item Implemented a REST API to check-in natural disaster survivors with a Typeform webhook, store them in a database, and query nearby health facilities with the Healthsites.io API
+                \item Implemented a REST API to check-in natural disaster survivors, store them in a database, and query nearby health facilities with the Healthsites.io API
                 \item Designed a frontend  to display checked-in survivors and local health facilities
                 \item Winner of the IBM Call for Code Challenge at AngelHack Manhattan
             \end{itemize}
