--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -164,7 +164,7 @@
 
         \begin{itemize}{\leftmargin=0.5em \itemindent=0em}
           \setlength\itemsep{0.1mm}
-          \item Debugged and tested features for the Buildly product backend, including the management of multiple endpoints
+          \item Debugged and tested features for the Buildly product backend, including the management of multiple endpoints and connecting multiple databases
           \item Maintained and executed unit and integration tests for the product core 
         \end{itemize}
         
@@ -201,7 +201,7 @@
     {Programmer | Middletown, CT}
     {\begin{itemize}
           \setlength\itemsep{0.1mm}
-          \item Implemented web and command-line utilities to retrieve Qualtrics survey data, compute share prices for participants, and output a spreadsheet for co-op coordinates to determine total shares and money owed per-person
+          \item Implemented web and command-line utilities to retrieve Qualtrics survey data, compute share prices for participants, and output a spreadsheet for co-op coordinators to determine total shares and money owed per-person
         \end{itemize}
     }
 
