--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -3,15 +3,16 @@
 % Adam Rahman's Resume Template
 %
 
-\documentclass[letterpaper, 11pt]{article}
+\documentclass[letterpaper, 10.5pt]{article}
 
 \usepackage{inputenc}
 \usepackage{fontspec}
-\usepackage[margin=0.5in]{geometry}
+\usepackage[margin=0.375in]{geometry}
 \usepackage{titlesec}
 \usepackage{colortbl}
 \usepackage{titling}
-\usepackage{libertine}
+% \usepackage{libertine}
+\usepackage[sfdefault]{roboto}
 \usepackage{xifthen}
 \usepackage{hyperref}
 \usepackage{sqrcaps}
@@ -54,12 +55,12 @@
         \vspace{-0.5mm}
         Portfolio: \href{http://adamr.io}{adamr.io} · 
         LinkedIn: \href{https://www.linkedin.com/in/adamsrahman/}{adamsrahman} · 
-        Github: \href{https://github.com/msradam}{msradam}  \\ 
+        GitHub: \href{https://github.com/msradam}{msradam}  \\ 
         \end{center}
     \end{minipage}}
 
 
-\renewcommand{\familydefault}{\sfdefault}
+% \renewcommand{\familydefault}{\sfdefault}
 
 %
 % Defining separate entry commands for Education, Experience, Projects, and Skills
@@ -106,7 +107,7 @@
     \begin{minipage}[t]{\linewidth}
     \vspace{-3mm}
     #4
-    \vspace{-2.5mm}
+    \vspace{-1.75mm}
     \small{#5}
     \end{minipage}\\
     \vspace{1mm}
@@ -131,7 +132,7 @@
     \begin{minipage}[t]{\linewidth}
     \vspace{-3mm}
     \small #3
-    \vspace{-2.5mm}
+    \vspace{-1.75mm}
     \small{#4}
     \end{minipage}\\
     \vspace{1mm}
@@ -168,7 +169,7 @@
 
 % Title and line formatting
 \titleformat{\part}{\Huge\scshape\filcenter}{}{1em}{}
-\titleformat{\section}{\large\scshape\bfseries\raggedright}{}{0.0em}{}[{\titlerule[0.75pt]}]
+\titleformat{\section}{\scshape\bfseries\raggedright}{}{0.0em}{}[{\titlerule[0.75pt]}]
 \titlespacing{\section}{0pt}{3pt}{7pt}
 \titleformat{\subsection}{\large\bfseries\centering}{}{0em}{\underline}%[\rule{3cm}{.2pt}]
 \titlespacing{\subsection}{0pt}{7pt}{7pt}
@@ -185,32 +186,46 @@
     \eduentry{Sept. 2016 -- May 2019}
     {Wesleyan University}
     {B.A. Computer Science, Theater; 3.5/4.0}
-    {\\ Graduated May 2019; Patricelli Center Fellow; Deans' List}
+    {\\ Graduated May 2019; Patricelli Center Fellow; Deans' List \\
+    \textbf{Relevant Coursework:} Randomized Algorithms, Algorithms \& Complexity, Functional Programming, Computer Networks, Design of Programming Languages, Proseminar in Audiovisual Machine Learning}
 
-    \section{experience}
-    \expentry{Sep 2019}
-    {Nov 2019}
+    \section{work experience}
+    \expentry{Sept. 2019}
+    {Nov. 2019}
     {Buildly}
-    {Backend Developer Intern}
+    {Software Developer, Intern}
     {
         \begin{itemize}
-          \setlength\itemsep{0.1mm}
-          \item Debugged and tested features for the Buildly product backend, including the management of multiple endpoints and connecting multiple databases
-          \item Maintained and executed unit and integration tests for the product core 
+          \setlength\itemsep{-0.5mm}
+          \item Implemented bugfixes, unit tests, and refactored features for Buildly's Django backend in order to connect multiple microservices to a single endpoint, manage multiple databases, and incorporate self-documenting API specifications
+          \item Maintained and refactored end-to-end test suite for frontend and backend with the Robot framework
+          \item Communicated with CEO and CTO daily about product roadmap and development guidelines
         \end{itemize}
         
     }
 
-    \expentry{Dec 2018}
-    {Feb 2019}
+    \expentry{Sept. 2019}
+    {Nov. 2019}
+    {Kite}
+    {Code Curator}
+    {
+        \begin{itemize}
+          \setlength\itemsep{-0.5mm}
+          \item Composed over 30 code samples adhering to Python best practices to answer the most frequently asked programming questions
+         \end{itemize}
+        
+    }
+
+    \expentry{Dec. 2018}
+    {Feb. 2019}
     {UNICEF}
-    {Software Engineer Intern}
+    {Software Developer, Intern}
     {
 
         \begin{itemize}{\leftmargin=0.5em \itemindent=0em}
-          \setlength\itemsep{0.1mm}
+          \setlength\itemsep{-0.5mm}
           \item Implemented utilites to \href{https://github.com/unicef/magicbox-download-roads}{retrieve road networks} for countries and \href{https://github.com/msradam/magicbox-site-routing}{compute distances} between coordinates in large geospatial datasets with machine-learning and networking libraries
-          \item Optimized algorithm performance to improve geospatial computation speed by thousands of times 
+          \item Optimized algorithm performance to improve computation speed by thousands of times across millions of geospatial points
           \item Provisioned a \href{https://hub.docker.com/r/msradam/magicbox-tools}{Docker image} bundled with these utilities and additional libraries for Magicbox developers and data scientists
         \end{itemize}
         
@@ -218,10 +233,10 @@
 
     \expentry{June 2018}
     {August 2018}
-    {Kurani}
-    {Computer Science Intern}
+    {Kurani Architecture}
+    {Software Developer, Intern}
     {\begin{itemize}
-          \setlength\itemsep{0.1mm}
+          \setlength\itemsep{-0.5mm}
           \item Integrated Raspberry Pi sensor data and IBM Watson Machine Learning predictions in prototype IoT dashboards
           \item Pitched to and collaborated with CEO on IoT implementation in learning space architecture 
         \end{itemize}
@@ -232,30 +247,39 @@
     {Wesleyan Local Co-Op}
     {Programmer}
     {\begin{itemize}
-          \setlength\itemsep{0.1mm}
+          \setlength\itemsep{-0.5mm}
           \item Implemented web and command-line utilities to retrieve Qualtrics survey data, compute share prices for participants, and output a spreadsheet for co-op coordinators to determine total shares and money owed per-person
         \end{itemize}
     }
 
     \section{projects}
 
+
+        \projectentry{August 2019}
+        {Curbside Chaos: Mapping Street Utilization in NYC}
+        {Pandas, Shapely, React}
+        {\begin{itemize}
+            \setlength\itemsep{-0.5mm}
+            \item Implemented solution to \href{https://kepler.gl/demo/map?mapUrl=https://dl.dropboxusercontent.com/s/u3st74ltz03hr4s/keplergl_9f6lhlq.json}{geocode and visualize over 30,000 location points} from NYC OpenData's parking location and 311 report datasets to map street and curbside usage by district, completed for BetaNYC's Mobility for All Abilities Hackathon
+        \end{itemize}
+        }
+
         \projectentry{July 2019}
             {Magicbox Geospatial Routing API}
-            {Django, Docker, React, PostgreSQL}
+            {Scikit-learn, Django, Docker, OpenAPI | \href{http://magicbox-routing.herokuapp.com}{magicbox-routing.herokuapp.com}}
             {\begin{itemize}
-                \setlength\itemsep{0.1mm}
-                \item Implemented a geospatial computation microservice for UNICEF's Magicbox platform, incorporating the utilities developed during the internship period
-                \item Designed a frontend to upload datasets and view road network visualizations with React and kepler.gl
+                \setlength\itemsep{-0.5mm}
+                \item Implemented a geospatial computation microservice for UNICEF's Magicbox platform, with endpoints to compute distances between geographic coordinates and retrieve roads as graph networks 
             \end{itemize}
             }
 
         \projectentry{June 2019}
-            {RESP}
-            {Node, Express, React, MongoDB}
+            {RESP: Responsive Emotional Support Protocols}
+            {Node, Express, React, MongoDB | \href{http://resp-angelhack.herokuapp.com}{resp-angelhack.herokuapp.com}}
             {\begin{itemize}
-                \setlength\itemsep{0.1mm}
-                \item Implemented a REST API to check-in natural disaster survivors, store them in a database, and query nearby health facilities with the Healthsites.io API, deployed at \href{http://resp-angelhack.herokuapp.com}{resp-angelhack.herokuapp.com}
-                \item Designed a frontend  to display checked-in survivors and local health facilities
+                \setlength\itemsep{-0.5mm}
+                \item Implemented RESTful backend server to check-in natural disaster survivors with Typeform webhooks, store them in a database, and query for information about nearby health facilities with the Healthsites.io API
+                \item Designed a frontend with an embedded Typeform and databases for checked-in survivors and local health facilities
                 \item Winner of the IBM Call for Code Challenge at AngelHack Manhattan
             \end{itemize}
             }
@@ -264,8 +288,8 @@
 
     \skillentry{languages}{Python, JavaScript (ES6+), Java, HTML5, CSS3, Bash}
     \skillentry{concepts}{RESTful API Design/Integration, MVC Architecture, Agile}
-    \skillentry{frameworks}{Django, Flask, Express, React, Jest, Robot}
-    \skillentry{tools}{Git, Docker, Heroku, Google Cloud Platform (GCP), Amazon Web Services (AWS) }
+    \skillentry{frameworks}{Django, Flask, Express, React, Vue, Jest, Robot}
+    \skillentry{tools}{Git, Docker, Kubernetes, Heroku, Google Cloud Platform (GCP), Amazon Web Services (AWS) }
     \skillentry{data}{PostgreSQL, GraphQL, MongoDB}
     \skillentry{testing}{Unit, Integration, End-to-End}
 
