--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -37,7 +37,7 @@
 %     \begin{center}
 %         \fontsize{16pt}{15pt}\selectfont\bfseries \theauthor \\
 %         \fontsize{10pt}{15pt}\selectfont\sf
-%         \href{mailto:mrahmanadam@gmail.com}{mrahmanadam@gmail.com} · (347) 593 7525 \\
+%         \href{mailto:munawaradamr@gmail.com}{munawaradamr@gmail.com} · (347) 593 7525 \\
 %         Portfolio: \href{http://adamr.io}{adamr.io} · 
 %         LinkedIn: \href{https://www.linkedin.com/in/adamsrahman/}{adamsrahman} · 
 %         Github: \href{https://github.com/msradam}{msradam}  \\ 
