--- a/AdamRahman_Resume.tex
+++ b/AdamRahman_Resume.tex
@@ -51,7 +51,7 @@
         \fontsize{15pt}{15pt}\selectfont\bfseries \theauthor \\
         \fontsize{10pt}{15pt}\selectfont\sf
         \vspace{-0.5mm}
-        \href{mailto:mrahmanadam@gmail.com}{mrahmanadam@gmail.com} · (347) 593 7525 \\
+        \href{mailto:munawaradamr@gmail.com}{munawaradamr@gmail.com} · (347) 593 7525 \\
         \vspace{-0.5mm}
         Portfolio: \href{http://adamr.io}{adamr.io} · 
         LinkedIn: \href{https://www.linkedin.com/in/adamsrahman/}{adamsrahman} · 
